deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "${name}"
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: "${name}"
      securityContext:
        fsGroup: 2000
      containers:
      - name: main
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        image: "274295908850.dkr.ecr.eu-west-1.amazonaws.com/t/${tenantname}/github/pauwels-labs/${name}:${version}"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 256m
            memory: 256Mi
          requests:
            cpu: 256m
            memory: 256Mi
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config
          mountPath: "/etc/${name}/config"
      volumes:
      - name: config
        secret:
          secretName: "config-${name}"
